# milvus-common

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile.builder  Makefile  README.md  conanfile.py
.github/: mergify.yml
.github/workflows/: notify-conanfiles.yaml  pre-commit.yaml  ut.yaml
cachinglayer/: CMakeLists.txt  CacheSlot.h  Utils.h
cachinglayer/lrucache/: DList.cpp  DList.h
cmake/: Utils.cmake
common/: CMakeLists.txt  Common.h  Consts.h  EasyAssert.h  SafeQueue.h  common_monitor.cpp  common_monitor.h  prometheus_client.cpp  prometheus_client.h
docs/design-docs/: 20260723-loading-overhead-management-and-accounting.md
include/cachinglayer/: CacheSlot.h  LoadingOverhead.h  LoadingOverheadTracker.h  Manager.h  Metrics.h  TieredStorageConfig.h  Translator.h  Utils.h
include/cachinglayer/lrucache/: DList.h  ListNode.h
include/common/: CommonMonitor.h  EasyAssert.h  FeatureReport.h  OpContext.h  PrometheusClient.h  SpanBytes.h  Trace.h  Tracer.h  TracerBase.h  TrackingStdAllocator.h  common_type_c.h
include/filemanager/: FileManager.h  InputStream.h  OutputStream.h
include/filemanager/impl/: LocalFileManager.h  LocalInputStream.h  LocalOutputStream.h  MemoryInputStream.h  MemoryOutputStream.h
include/flat_hash_map/: byteall_hash_map.hpp  flat_hash_map.hpp  unordered_map.hpp
include/knowhere/: aio_context_pool.h  io_completion_reader.h  io_context_pool.h  io_reader.h  io_span.h  thread_pool.h  uring_context_pool.h
include/log/: Log.h
include/ncs/: InMemNcsConnector.h  InMemoryKV.h  InMemoryNcs.h  RedisNcs.h  RedisNcsConnector.h  RedisTypes.h  ncs.h
include/ptrhash/: ptrhash.hpp
include/syncpoint/: sync_point.h  sync_point_impl.h
log/: Log.cpp
src/cachinglayer/: LoadingOverhead.cpp  Manager.cpp  Metrics.cpp  Utils.cpp
src/cachinglayer/lrucache/: DList.cpp  ListNode.cpp
src/common/: CommonMonitor.cpp  EasyAssert.cpp  FeatureReport.cpp  PrometheusClient.cpp  ThreadPools.cpp  Tracer.cpp
src/filemanager/impl/: LocalFileManager.cpp  LocalInputStream.cpp  LocalOutputStream.cpp
src/knowhere/: aio_context_pool.cc  io_completion_reader.cc  io_context_pool.cc  io_reader.cc  io_reader_internal.h  thread_pool.cc  uring_context_pool.cc
src/log/: Log.cpp
src/ncs/: InMemNcsConnector.cpp  InMemoryKV.cpp  InMemoryNcs.cpp  RedisNcs.cpp  RedisNcsConnector.cpp  ncs.cpp
src/syncpoint/: sync_point.cc  sync_point_impl.cc
test/: CMakeLists.txt  FeatureReportTest.cpp  IOContextPoolTest.cpp  PtrHashTest.cpp  StreamTest.cpp  TracerTest.cpp  init_gtest.cpp  test_tracer.cpp
test/test_cachinglayer/: CMakeLists.txt  cachinglayer_test_utils.h  mock_list_node.h  test_cache_slot.cpp  test_dlist.cpp  test_loading_overhead_group.cpp  test_loading_overhead_policy.cpp  test_loading_overhead_tracker.cpp  test_tiered_storage_config.cpp  test_utils.cpp
test/test_ncs/: CMakeLists.txt  test_inmem_ncs.cpp  test_ncs_all.cpp  test_redis_ncs.cpp
